src/app/meet-the-team/team-members.component.scss
:host .members {
    padding: 0 0 48px 0;
    
    &__view-toggle {
        padding-bottom: 18px;
    }

    &__search-bar {
        background: url('../../icons/search-bar.svg') no-repeat 7px;
        border: none;
        outline: none;
        width: 300px;
        height: 34px;
        padding-left: 30px;
    }

    &__list-view-icon, &__grid-view-icon, &__sort-view-icon {
        border: none;
        width: 25px;
        height: 25px;
    }

    &__list-view-icon {
        background: url('../../icons/list-view.svg') no-repeat;
        margin-left: 350px;
    }

    &__grid-view-icon {
        background: url('../../icons/grid-view.svg') no-repeat;
        margin-left: 350px;
    }

    &__sort-view-icon {
        background: url('../../icons/sorting-icon.svg') no-repeat;
        padding-right: 30px;
    }

    &__member-cards-grid {
        width: 210px;
        height: 342px; 
        border-radius: 20px; 
        background: url('../../icons/green-grid-card.svg') no-repeat; 
    }

    &__member-cards-grid:nth-child(3n+1) {
        background: url('../../icons/orange-grid-card.svg') no-repeat; 
    }

    &__member-cards-grid:nth-child(3n+2) {
        background: url('../../icons/pink-grid-card.svg') no-repeat; 
    }

    &__member-cards-list {
        width: 749px;
        height: 100px;
        border-radius: 20px;
        padding-bottom: 18px;
        display: flex;
        flex-direction: row;
    }

    &__member-cards-list:nth-child(3n) {
        background: url('../../icons/green-list-card.svg') no-repeat; 
    }

    &__member-cards-list:nth-child(3n+2) {
        background: url('../../icons/orange-list-card.svg') no-repeat; 
    }

    &__member-cards-list:nth-child(3n+1) {
        background: url('../../icons/pink-list-card.svg') no-repeat; 
    }

    &__grid {
        display: inline-flex;
        grid-gap: 61px;
        flex-wrap: wrap;
    }

    &__list {
        display: inline-flex;
        flex-direction: column;
    }

    &__name-grid, &__name-list, &__image-grid, &__image-list, &__city-grid {
        text-align: center;
    }

    &__name-grid, &__name-list {
        font-family: 'Karla';
        font-size: 18px;
        
    }

    &__name-grid {
        margin: 65px 45px 35px 42px;
        white-space: nowrap;
    }

    &__name-list {
        margin: 28px 0 3px 23px;
        white-space: nowrap;
    }

    &__image-grid{
        width: 100px;
        height: 100px;
        border-radius: 50%;
        margin: 0 55px 31px 55px;
    }

    &__image-list {
        width: 80px;
        height: 80px;
        border-radius: 50%;
        margin: 12px 23px 8px 31px;
    }

    &__city-grid, &__city-list {
        font-family: 'Lato';
        font-size: 14px;
        white-space: nowrap;
    }

    &__city-grid {
        margin: 0 80px 22px 70px;
    }

    &__city-list {
        margin: 0 0 31px 23px;
    }

    &__contact-info-grid {
        margin: 0 80px 34px 80px;
    }

    &__contact-info-list {
        margin: 40px 33px 38px 665px;
        position: absolute;
    }

    &__email-icon, &__call-icon {
        border: none;
        width: 19px;
        height: 19px;
    }

    &__email-icon {
        background: url('../../icons/email-icon.svg') no-repeat 1px;
        padding-top: 4px;
        padding-right: 30px;
    }

    &__call-icon {
        background: url('../../icons/call-icon.svg') no-repeat 1px;
        padding-right: 22px;
        padding-top: 7px;
    }
}

